# calolie-app

./: .gitignore  README.md  app.py  calorie_graph.py  food_log_gui.py  pyproject.toml
.streamlit/: config.toml
