[project]
name = "calolie-app"
version = "1.0.0"
description = "Ancient-Rome dark-themed calorie tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.0",
    "google-auth>=2.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]

[project.scripts]
calolie = "food_log_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
